--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,11 @@
   </div>
 
   <div class="menu">
-      <a href="#about">about</a>
-      <a href="#blog">blog</a>
-      <a href="#inspo">inspo</a>
+        <a href="https://isliiu.github.io/about.html">about</a>
+        <a href="https://isliiu.github.io/blog.html">blog</a>
+        <a href="https://isliiu.github.io/inspo.html">inspo</a>
   </div>
+</div>
 </div>
 
 <body>
