--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
 
 <div class="header">
     <div class="logo">
-        <p>isliiu</p>
+    <p>isliiu</p>
     </div>
 
     <div class="menu">
-        <a href="#about">about</a>
-        <a href="#blog">blog</a>
-        <a href="#inspo">inspo</a>
+        <a href="https://isliiu.github.io/about.html">about</a>
+        <a href="https://isliiu.github.io/blog.html">blog</a>
+        <a href="https://isliiu.github.io/inspo.html">inspo</a>
     </div>
 </div>
 
