--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
 
 <div class="header">
     <div class="logo">
-    <p>isliiu</p>
+        <p>isliiu</p>
     </div>
-
+  
     <div class="menu">
-        <a href="https://isliiu.github.io/about.html">about</a>
-        <a href="https://isliiu.github.io/blog.html">blog</a>
-        <a href="https://isliiu.github.io/inspo.html">inspo</a>
+      <a href="about.html">about</a>
+      <a href="blog.html">blog</a>
+      <a href="inspo.html">inspo</a>
     </div>
-</div>
+  </div>
 
 <body>
     <h1>about</h1>
