--- a/blog.html
+++ b/blog.html
@@ -10,11 +10,10 @@
   </div>
 
   <div class="menu">
-        <a href="https://isliiu.github.io/about.html">about</a>
-        <a href="https://isliiu.github.io/blog.html">blog</a>
-        <a href="https://isliiu.github.io/inspo.html">inspo</a>
+    <a href="about.html">about</a>
+    <a href="blog.html">blog</a>
+    <a href="inspo.html">inspo</a>
   </div>
-</div>
 </div>
 
 <body>
