--- a/inspo.html
+++ b/inspo.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="menu">
-    <a href="about.html">about</a>
+    <a href="index.html">about</a>
     <a href="blog.html">blog</a>
     <a href="inspo.html">inspo</a>
   </div>
