--- a/index.html
+++ b/index.html
@@ -1,54 +1,9 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; URL=about.html" />
 </head>
-
-<div class="header">
-  <div class="logo">
-      <p>isliiu</p>
-  </div>
-
-  <div class="menu">
-    <a href="about.html">about</a>
-    <a href="blog.html">blog</a>
-    <a href="inspo.html">inspo</a>
-  </div>
-</div>
-
 <body>
-  <h1>inspo </h1>
-
-  <p> communities: </p>
-  <ul>
-    <li><a href="https://www.girlsmakegames.com/">girls make games</a></li>
-    <li><a href="https://girlswhocode.com/">girls who code</a></li>
-    <li><a href="https://www.kodewithklossy.com/">kode with klossy</a></li>
-  </ul>
-  
-  <p> <br> <br> podcasts: </p>
-  <ul>
-    <li><a href="https://www.youtube.com/@theburnoutspodcast">the burnouts</a></li>
-    <li><a href="https://www.nytimes.com/column/hard-fork">hard fork</a></li>
-    <li><a href="https://podcasts.voxmedia.com/show/pivot">pivot</a></li>
-  </ul>
-
-  <p> <br> <br> readings: </p>
-  <ul>
-    <li><a href="https://www.goodreads.com/book/show/58822691-allow-me-to-retort">allow me to retort</a></li>
-    <li><a href="https://faculty.cc.gatech.edu/~beki/cs4001/Winner.pdf">do artifacts have politics?</a></li>
-    <li><a href="https://proceedings.mlr.press/v81/buolamwini18a/buolamwini18a.pdf">gender shades</a></li>
-    <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2757236">moral crumple zones</a></li>
-    <li><a href="https://www.goodreads.com/book/show/22632.The_Trial_and_Death_of_Socrates">the trial and death of socrates</a></li>
-    <li><a href="https://www.cambridge.org/core/journals/canadian-journal-of-philosophy/article/whats-wrong-with-automated-influence/98F5E24BEADE585050B773D2CBEB1F39">what's wrong with automated influence</a></li>
-  </ul>
-
-  <p> <br> <br> scholars: </p>
-  <ul>
-    <li><a href="https://www.danah.org/">danah boyd</a></li>
-    <li><a href="https://www.poetofcode.com/">joy buolamwini</a></li>
-    <li><a href="https://www.ruhabenjamin.com/">ruha benjamin</a></li>
-  </ul>
 </body>
-
 </html>
