--- a/about.html
+++ b/about.html
@@ -21,11 +21,12 @@
 
     <p>
         during the summer of 2022 as i watched girls and women getting denied access to life-saving
-        reproductive healthcare, i was itching to become involved from taipei. with two friends, i created
-        clothes 4 roe, a series of secondhand clothes sales benefiting reproductive rights nonprofits
-        in the united states. i am grounded by a desire to solve meaningful problems through community, whether
-        it's bridging the gender gap in stem or mitigating the harms of artificial intelligence on
-        marginalized communities. over the years, i have been lucky to learn from compassionate and talented people at kode with
+        reproductive healthcare, i was determined to take action but i didn't know how i could from
+        taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
+        benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
+        solve meaningful problems through community, whether it's bridging the gender gap in stem
+        or mitigating the harms of artificial intelligence on marginalized communities. over the
+        years, i have been lucky to learn from compassionate and talented people at kode with
         klossy, girl up, public citizen, global fund for women, the national science foundation, and
         more. as a creative technologist and activist, i hope to continue building, researching, and
         advocating for a better world. 
