--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
         <ul>
         <li>developed philosophical frameworks for military AI</li>
         <li>redistributed $100k to gender justice movements in east africa</li>
-        <li>sourced and curated outfits for added to the file, georgetown's fashion photography magazine</li>
-        </ul>
+        <li>sourced outfits for added to the file, georgetown's fashion photography magazine</li>
+        </ul> 
     </p>
 </body>
 
