--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <ul>
         <li>developed philosophical frameworks for military AI</li>
         <li>redistributed $100k to gender justice movements in east africa</li>
-        <li>sourced outfits for added to the file, georgetown's fashion photography magazine</li>
+        <li>sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a>, georgetown's fashion photography magazine</li>
         </ul> 
     </p>
 </body>
