--- a/about.html
+++ b/about.html
@@ -18,13 +18,15 @@
 
 <body>
     <h1>about</h1>
+    <img src="galaxy.jpeg" class="about-image" />
 
-    <p>
+    <p> 
+        <br> <br>
         during the summer of 2022 as i watched girls and women getting denied access to life-saving
         reproductive healthcare, i was determined to take action but i didn't know how i could from
         taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
         benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
-        solve meaningful problems through community, whether it's bridging the gender gap in stem
+        solve difficult problems through community, whether it's bridging the gender gap in stem
         or mitigating the harms of artificial intelligence on marginalized communities. over the
         years, i have been lucky to learn from compassionate and talented people at kode with
         klossy, girl up, public citizen, global fund for women, the national science foundation, and
@@ -34,9 +36,9 @@
 
     <p>
         <br> <br>
-        some recent adventures:
+        recent adventures:
         <ul>
-        <li>developed philosophical frameworks for military AI</li>
+        <li>developed a philosophical framework for military AI</li>
         <li>redistributed $100k to gender justice movements in east africa</li>
         <li>sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a>, georgetown's fashion photography magazine</li>
         </ul> 
