--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <p> 
         <br> <br>
-        during the summer of 2022 as i watched girls and women getting denied access to life-saving
+        during the summer of 2022 as i watched girls and women barred from accessing life-saving
         reproductive healthcare, i was determined to take action but i didn't know how i could from
         taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
         benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
