--- a/inspo.html
+++ b/inspo.html
@@ -24,6 +24,7 @@
     <li><a href="https://www.girlsmakegames.com/">girls make games</a></li>
     <li><a href="https://girlswhocode.com/">girls who code</a></li>
     <li><a href="https://www.kodewithklossy.com/">kode with klossy</a></li>
+    <li><a href="https://sfpc.study/">school for poetic computation</a></li>
   </ul>
   
   <p> <br> <br> podcasts: </p>
