--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+<body>
+
 <div class="header">
     <div class="logo">
         <p>isliiu</p>
@@ -16,7 +18,6 @@
     </div>
   </div>
 
-<body>
     <h1>about</h1>
     <img src="galaxy.jpeg" class="about-image" />
 
@@ -26,9 +27,8 @@
         reproductive healthcare, i was determined to take action but i didn't know how i could from
         taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
         benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
-        solve difficult problems through community, whether it is bridging the gender gap in stem
-        or mitigating the harms of artificial intelligence on marginalized communities. over the
-        years, i have been lucky to learn from compassionate and talented people at kode with
+        solve difficult problems through community, whether it is bridging the STEM gender gap
+        or mitigating the harms of AI on marginalized communities. over the years, i have been lucky to learn from compassionate and talented people at kode with
         klossy, girl up, public citizen, global fund for women, the national science foundation, and
         more. as a creative technologist, i hope to continue building, researching, and
         advocating for a better world. 
