--- a/about.html
+++ b/about.html
@@ -5,44 +5,44 @@
 </head>
 
 <body>
-
 <div class="header">
-    <div class="logo">
-        <p>isliiu</p>
-    </div>
-  
-    <div class="menu">
-      <a href="about.html">about</a>
-      <a href="blog.html">blog</a>
-      <a href="inspo.html">inspo</a>
-    </div>
+  <div class="logo">
+    <p>isliiu</p>
   </div>
+  
+  <div class="menu">
+    <a href="about.html">about</a>
+    <a href="blog.html">blog</a>
+    <a href="inspo.html">inspo</a>
+  </div>
+</div>
 
-    <h1>about</h1>
-    <img src="galaxy.jpeg" class="about-image" />
+  <h1>about</h1>
+  <img src="galaxy.jpeg" class="about-image" />
 
-    <p> 
-        <br> <br>
-        during the summer of 2022 as i watched girls and women barred from accessing life-saving
-        reproductive healthcare, i was determined to take action but i didn't know how i could from
-        taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
-        benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
-        solve difficult problems through community, whether it is bridging the STEM gender gap
-        or mitigating the harms of AI on marginalized communities. over the years, i have been lucky to learn from compassionate and talented people at kode with
-        klossy, girl up, public citizen, global fund for women, the national science foundation, and
-        more. as a creative technologist, i hope to continue building, researching, and
-        advocating for a better world. 
-    </p>
+  <p> 
+      <br> <br>
+      during the summer of 2022 as i watched girls and women barred from accessing life-saving
+      reproductive healthcare, i was determined to act but i didn't know how i could from
+      taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
+      benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
+      solve difficult problems through community, whether it is bridging the STEM gender gap
+      or mitigating the harms of AI on marginalized communities. over the years, i have been lucky
+      to learn from compassionate and smart people at kode with klossy, girl up, public citizen,
+      global fund for women, the national science foundation, and more. as a creative technologist,
+      i hope to continue building, researching, and advocating for a better world. 
+  </p>
 
-    <p>
-        <br> <br>
-        recent adventures:
-        <ul>
-        <li>developed a philosophical framework for military AI</li>
-        <li>redistributed $100k to gender justice movements in east africa</li>
-        <li>sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a>, georgetown's fashion photography magazine</li>
-        </ul> 
-    </p>
+  <p>
+      <br> <br>
+      recent adventures:
+      <ul>
+      <li>developed a philosophical framework for military AI</li>
+      <li>redistributed $100k to gender justice movements in east africa</li>
+      <li>sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a>, georgetown's fashion photography magazine</li>
+      </ul> 
+  </p>
+
 </body>
 
 </html>
