--- a/about.html
+++ b/about.html
@@ -27,10 +27,8 @@
       taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
       benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
       solve difficult problems through community, whether it is bridging the STEM gender gap
-      or mitigating the harms of AI on marginalized communities. over the years, i have been lucky
-      to learn from compassionate and smart people at kode with klossy, girl up, public citizen,
-      global fund for women, the national science foundation, and more. as a creative technologist,
-      i hope to continue building, researching, and advocating for a better world. 
+      or mitigating the harms of AI on marginalized communities. as a creative technologist, i hope
+      to continue building, researching, and advocating for a better world. 
   </p>
 
   <p>
@@ -39,7 +37,7 @@
       <ul>
       <li>developed a philosophical framework for military AI</li>
       <li>redistributed $100k to gender justice movements in east africa</li>
-      <li>sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a>, georgetown's fashion photography magazine</li>
+      <li>sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a> magazine</li>
       </ul> 
   </p>
 
