--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
       benefiting reproductive rights nonprofits in the united states. i am grounded by a desire to
       solve difficult problems through community, whether it is bridging the STEM gender gap
-      or mitigating the harms of AI on marginalized communities. as a creative technologist, i hope
+      or mitigating the harms of AI on marginalized groups. as a creative technologist, i hope
       to continue building, researching, and advocating for a better world. 
   </p>
 
