edited for style

--- a/inspo.html
+++ b/inspo.html
@@ -19,37 +19,35 @@
 
 <h1>inspo </h1>
 
-  <p> communities: </p>
-  <ul>
-    <li><a href="https://www.girlsmakegames.com/">girls make games</a></li>
-    <li><a href="https://girlswhocode.com/">girls who code</a></li>
-    <li><a href="https://www.kodewithklossy.com/">kode with klossy</a></li>
-    <li><a href="https://sfpc.study/">school for poetic computation</a></li>
-  </ul>
-  
-  <p> <br> <br> podcasts: </p>
-  <ul>
-    <li><a href="https://www.youtube.com/@theburnoutspodcast">the burnouts</a></li>
-    <li><a href="https://www.nytimes.com/column/hard-fork">hard fork</a></li>
-    <li><a href="https://podcasts.voxmedia.com/show/pivot">pivot</a></li>
-  </ul>
+  <p> communities: <br> </p>
+  <p> ☆ <a href="https://www.girlsmakegames.com/">girls make games</a> <br>
+      ☆ <a href="https://www.kodewithklossy.com/">kode with klossy</a> <br>
+      ☆ <a href="https://sfpc.study/">school for poetic computation</a>  
+  </p>
 
-  <p> <br> <br> readings: </p>
-  <ul>
-    <li><a href="https://www.goodreads.com/book/show/58822691-allow-me-to-retort">allow me to retort</a></li>
-    <li><a href="https://faculty.cc.gatech.edu/~beki/cs4001/Winner.pdf">do artifacts have politics?</a></li>
-    <li><a href="https://proceedings.mlr.press/v81/buolamwini18a/buolamwini18a.pdf">gender shades</a></li>
-    <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2757236">moral crumple zones</a></li>
-    <li><a href="https://www.goodreads.com/book/show/22632.The_Trial_and_Death_of_Socrates">the trial and death of socrates</a></li>
-    <li><a href="https://www.cambridge.org/core/journals/canadian-journal-of-philosophy/article/whats-wrong-with-automated-influence/98F5E24BEADE585050B773D2CBEB1F39">what's wrong with automated influence</a></li>
-  </ul>
+  <p> <br> <br> podcasts: <br> </p>
+  <p> 
+      ☆ <a href="https://www.nytimes.com/column/hard-fork">hard fork</a> <br>
+      ☆ <a href="https://podcasts.voxmedia.com/show/pivot">pivot</a> 
+  </p>
 
-  <p> <br> <br> scholars: </p>
-  <ul>
-    <li><a href="https://www.danah.org/">danah boyd</a></li>
-    <li><a href="https://www.poetofcode.com/">joy buolamwini</a></li>
-    <li><a href="https://www.ruhabenjamin.com/">ruha benjamin</a></li>
-  </ul>
+  <p> <br> <br> readings: <br> </p>
+  <p> 
+      ☆ <a href="https://www.goodreads.com/book/show/58822691-allow-me-to-retort">allow me to retort</a> <br>
+      ☆ <a href="https://faculty.cc.gatech.edu/~beki/cs4001/Winner.pdf">do artifacts have politics?</a> <br> 
+      ☆ <a href="https://proceedings.mlr.press/v81/buolamwini18a/buolamwini18a.pdf">gender shades</a> <br> 
+      ☆ <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2757236">moral crumple zones</a> <br>
+      ☆ <a href="https://www.goodreads.com/book/show/22632.The_Trial_and_Death_of_Socrates">the trial and death of socrates</a> <br>
+      ☆ <a href="https://www.cambridge.org/core/journals/canadian-journal-of-philosophy/article/whats-wrong-with-automated-influence/98F5E24BEADE585050B773D2CBEB1F39">what's wrong with automated influence</a>
+  </p>
+
+  <p> <br> <br> thinkers: <br> </p>
+  <p> ☆ <a href="https://www.danah.org/">danah boyd</a> <br>
+      ☆ <a href="https://www.poetofcode.com/">joy buolamwini</a> <br>
+      ☆ <a href="https://petra-collins.com/">petra collins</a> <br>
+      ☆ <a href="https://www.ruhabenjamin.com/">ruha benjamin</a>
+  </p>
+
 </body>
 
 </html>
