--- a/about.html
+++ b/about.html
@@ -22,21 +22,16 @@
 
   <p> 
       <br> <br>
-      during the summer of 2022 as i watched girls and women barred from accessing life-saving
-      reproductive healthcare, i was determined to act but i didn't know how i could from
-      taipei. with two friends, i created clothes 4 roe, a series of secondhand clothes sales
-      benefiting reproductive rights nonprofits like the <a href="https://brigidalliance.org/">brigid alliance</a>. i am grounded by a desire to
-      solve difficult problems through community, whether it is bridging the STEM gender gap
-      or mitigating the harms of AI on marginalized groups. as a creative technologist, i hope
-      to continue building, researching, and advocating for a better world. 
+      isabel is a creative technologist and director based in the dmv.
   </p>
 
 <p>
   <br> 
   past lives: <br> <br> 
-  ☆ developed a philosophical framework for military AI <br> 
-  ☆ redistributed $100k to gender justice movements in east africa <br>
-  ☆ sourced outfits for <a href="https://readymag.website/u2193039087/ADDED-TO-THE-FILE-MAGAZINE/">added to the file</a> magazine <br>
+  ☆ <a href="https://www.nsf.gov/">national science foundation</a> <br>
+  ☆ <a href="https://www.citizen.org/">public citizen</a> <br>
+  ☆ <a href="https://www.globalfundforwomen.org/">global fund for women</a> <br>
+  ☆ <a href="https://dcfashionweek.org/">dc fashion week</a> <br>
 </body>
 
 </html>
