--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
   <div class="menu">
     <a href="about.html">about</a>
     <a href="blog.html">blog</a>
-    <a href="inspo.html">inspo</a>
+    <a href="portfolio.html">portfolio</a>
   </div>
 </div>
 
-
+<h1>portfolio</h1>
 
 </body>
 
