--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <div class="menu">
     <a href="about.html">about</a>
     <a href="blog.html">blog</a>
-    <a href="inspo.html">inspo</a>
+    <a href="portfolio.html">portfolio</a>
   </div>
 </div>
 
