--- a/summer-favorites.html
+++ b/summer-favorites.html
@@ -14,7 +14,7 @@
   <div class="menu">
     <a href="about.html">about</a>
     <a href="blog.html">blog</a>
-    <a href="inspo.html">inspo</a>
+    <a href="portfolio.html">portfolio</a>
   </div>
 </div>
 
