a little bit of this and a little bit of that

--- a/about.html
+++ b/about.html
@@ -5,11 +5,7 @@
 </head>
 
 <body>
-<div class="header">
-  <div class="logo">
-    <p>isliiu</p>
-  </div>
-  
+<div class="header">  
   <div class="menu">
     <a href="about.html">about</a>
     <a href="blog.html">blog</a>
@@ -28,10 +24,10 @@
 <p>
   <br> 
   past lives: <br> <br> 
-  ☆ <a href="https://www.nsf.gov/">national science foundation</a> <br>
-  ☆ <a href="https://www.citizen.org/">public citizen</a> <br>
-  ☆ <a href="https://www.globalfundforwomen.org/">global fund for women</a> <br>
-  ☆ <a href="https://dcfashionweek.org/">dc fashion week</a> <br>
+  ☆ fritz fellow at <a href="https://cset.georgetown.edu/">center for security and emerging technology</a> <br>
+  ☆ advisor at <a href="https://www.globalfundforwomen.org/">global fund for women</a> <br>
+  ☆ technology, innovation, and partnerships intern at <a href="https://www.nsf.gov/">national science foundation</a> <br>
+  ☆ ai policy intern at <a href="https://www.citizen.org/">public citizen</a> <br>
 </body>
 
 </html>
