--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,6 @@
 
 <body> 
 <div class="header">
-  <div class="logo">
-    <p>isliiu</p>
-  </div>
-
   <div class="menu">
     <a href="about.html">about</a>
     <a href="blog.html">blog</a>
@@ -18,6 +14,11 @@
 </div>
 
 <h1>portfolio</h1>
+
+<div class="image-row">
+  <img src="image1.jpeg"/>
+  <img src="image2.jpeg"/>
+</div>
 
 </body>
 
