--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
   <p> 
       <br> <br>
-      isabel is a creative technologist and director based in the dmv.
+      isabel is a creative technologist and researcher based in the dmv.
   </p>
 
 <p>
